Fix the <p> tags in notes to wrap correctly

--- a/app/css/main.sass
+++ b/app/css/main.sass
@@ -30,7 +30,8 @@ body
 
     p
       width: 33%
-      float: left
+      display: inline-block
+      vertical-align: top
       font-size: 24px
       padding: 1em
       box-sizing: border-box
