--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -527,7 +527,8 @@ body {
     margin-bottom: 2em; }
     body .note p {
       width: 33%;
-      float: left;
+      display: inline-block;
+      vertical-align: top;
       font-size: 24px;
       padding: 1em;
       box-sizing: border-box;
